@@ -24,5 +24,22 @@ test_that("grid/ticks translated correctly",{
   }
 })
 
-
-  
+test_that("plot panel border is translated correctly", {
+  ggiris <- ggplot(iris)+
+    geom_point(aes(Petal.Width, Sepal.Width))+
+    theme_grey() # has no panel.border
+  info <- gg2list(ggiris)
+  for(xy in c("x", "y")){
+    ax.list <- info$kwargs$layout[[paste0(xy, "axis")]]
+    expect_identical(ax.list$showline, FALSE)
+  }
+  red <- ggplot(iris)+
+    geom_point(aes(Petal.Width, Sepal.Width))+
+    theme(panel.border=element_rect(colour="red"))
+  info <- gg2list(red)
+  for(xy in c("x", "y")){
+    ax.list <- info$kwargs$layout[[paste0(xy, "axis")]]
+    expect_identical(ax.list$showline, TRUE)
+    expect_identical(ax.list$linecolor, toRGB("red"))
+  }
+})
